# video_stream

./: main.py  pyproject.toml
src/: crud.py  database.py  models.py  schemas.py
src/api/: api.py
src/api/endpoints/: __init__.py  actors.py  vods.py
templates/: base.html  index.html  movie.html
templates/static/css/: styles.css
