[tool.poetry]
name = "video-stream"
version = "0.1.0"
description = ""
authors = ["septimochen <qizu.chen@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
